Updated writeString method for error handling and used new JDK 11 features